# hack

./: .env.example  README.md  compose.yaml
python/: .env.example  Dockerfile  pyproject.toml
python/src/hack/agent/: connector.py  providers.py
python/src/hack/agent/rest_server/main/: run_rest_server.py
python/src/hack/agent/rest_server/routers/: __init__.py  check.py  healthcheck.py
python/src/hack/alembic/versions/: 16ec54d2a72b_initial.py  1cbbfc9dd11e_upd.py  4825158d01d7_initial.py  618e60ba0c8f_initial.py  850e995941c0_initial.py  b1f56269e826_upd.py
python/src/hack/bindingd/: main.py
python/src/hack/core/: agent_connector.py  providers.py
python/src/hack/core/main/: tasks_daemon.py
python/src/hack/core/models/: __init__.py  agent.py  agent_keypair.py  base.py  check.py  login_session.py  resource.py
python/src/hack/core/models/check/: __init__.py  check.py  resource.py
python/src/hack/core/services/: agent.py  checks.py  providers.py
python/src/hack/heartbeatd/: main.py
python/src/hack/integration_tests/: api_templates.py  test_access.py  test_agents.py  test_checks.py
python/src/hack/rest_server/: exception_handlers.py
python/src/hack/rest_server/routers/: __init__.py  agents.py  checks.py
python/src/hack/rest_server/schemas/: agents.py  checks.py
python/src/hack/server/: providers.py
python/src/hack/server/main/: run_rest_server.py
python/src/hack/server/routers/: __init__.py  access.py  checks.py
python/src/hack/server/schemas/: checks.py
python/src/hack/tasksd/: main.py  tasks.py
sshd/: Dockerfile  entrypoint.sh  (+1 more)
(+15 files in other folders)
