[project]
name = "hack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "alembic",
    "ruff",
    "pytest",
    "requests",
    "deepdiff",
    "authx",
    "argon2-cffi",
    "jsonschema (>=4.25.0,<5.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "asyncssh (>=2.21.1,<3.0.0)",
    "redis (>=7.0.0,<8.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
run-rest-server = "hack.server.main.run_rest_server:main"

[tool.ruff]
line-length = 79
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
